[gd_scene load_steps=4 format=3 uid="uid://d1q7x5xw0k8qn"]

[ext_resource type="Script" path="res://scenes/menus/ship_selection/ship_selection_system_coordinator.gd" id="1_mh3vr"]
[ext_resource type="Script" path="res://scenes/menus/ship_selection/ship_selection_data_manager.gd" id="2_6xfhp"]
[ext_resource type="PackedScene" uid="uid://c3qme7y3ngl8j" path="res://scenes/menus/ship_selection/ship_selection.tscn" id="3_8r4wm"]

[node name="ShipSelectionSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_mh3vr")

[node name="ShipSelectionDataManager" type="Node" parent="."]
script = ExtResource("2_6xfhp")

[node name="ShipSelectionController" parent="." instance=ExtResource("3_8r4wm")]
layout_mode = 1

[node name="LoadoutManager" type="Node" parent="."]